--- a/pytorch/Dockerfile
+++ b/pytorch/Dockerfile
@@ -1,6 +1,7 @@
 # Copyright (c) Jupyter Development Team.
 # Distributed under the terms of the Modified BSD License.
-FROM $BASE_CONTAINER
+ARG BASE_CONTAINER
+FROM ${BASE_CONTAINER}
 
 
 # Fix DL4006
