--- a/mxnet/Dockerfile
+++ b/mxnet/Dockerfile
@@ -10,6 +10,7 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN mamba install --quiet --yes \
     'cudatoolkit=10.2' \
     mamba clean --all -f -y && \
+    pip config set global.index-url https://mirrors.aliyun.com/pypi/simple/ && \
     pip install mxnet-cu102==1.7.0 autogluon --no-cache-dir && \
     rm -fr ~/.cache/pip && \
     fix-permissions "${CONDA_DIR}" && \
