--- a/tensorflow/Dockerfile
+++ b/tensorflow/Dockerfile
@@ -12,6 +12,7 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 RUN mamba install --quiet --yes \
     'tensorflow<2.6' && \
     mamba clean --all -f -y && \
+    pip config set global.index-url https://mirrors.aliyun.com/pypi/simple/ && \
     pip install autokeras  --no-cache-dir && \
     rm -fr ~/.cache/pip && \
     fix-permissions "${CONDA_DIR}" && \
