--- a/tensorflow/Dockerfile
+++ b/tensorflow/Dockerfile
@@ -9,10 +9,9 @@ LABEL maintainer="Jupyter Project <jupyter@googlegroups.com>"
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install Tensorflow
-RUN mamba install --quiet --yes \
+RUN mamba install --yes \
     'tensorflow<2.6' && \
     mamba clean --all -f -y && \
-    pip config set global.index-url https://mirrors.aliyun.com/pypi/simple/ && \
     pip install autokeras  --no-cache-dir && \
     rm -fr ~/.cache/pip && \
     fix-permissions "${CONDA_DIR}" && \
