--- a/scipy-cpu/Dockerfile
+++ b/scipy-cpu/Dockerfile
@@ -22,7 +22,7 @@ USER root
 # Install tini: init for containers
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN sed -i 's/archive.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list && \
+RUN sed -i 's/archive.ubuntu.com/opentuna.cn/g' /etc/apt/sources.list && \
     apt-get update --yes && \
     apt-get install --yes --no-install-recommends \
     tini \
