--- a/pycaret/Dockerfile
+++ b/pycaret/Dockerfile
@@ -7,9 +7,7 @@ FROM ${BASE_CONTAINER}
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install pycaret
-RUN apt-get install --yes --no-install-recommends gcc && \
-    apt-get clean && rm -rf /var/lib/apt/lists/* && \
-    pip install pycaret[full]  --no-cache-dir && \
+RUN pip install pycaret[full]  --no-cache-dir && \
     rm -fr ~/.cache/pip && \
     fix-permissions "${CONDA_DIR}" && \
     fix-permissions "/home/${NB_USER}"
