--- a/auto-sklearn/Dockerfile
+++ b/auto-sklearn/Dockerfile
@@ -8,6 +8,7 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install auto-sklearn
 RUN mamba install --yes -c conda-forge \
+    gxx_linux-64 gcc_linux-64 swig \
     'auto-sklearn' && \
     mamba clean --all -f -y && \
     fix-permissions "${CONDA_DIR}" && \
