--- a/pycaret/Dockerfile
+++ b/pycaret/Dockerfile
@@ -8,7 +8,7 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install pycaret
 RUN mamba install --yes -c conda-forge \
-    gxx_linux-64 gcc_linux-64 && \
+    shap  && \
     pip install pycaret[full]  --no-cache-dir && \
     rm -fr ~/.cache/pip && \
     fix-permissions "${CONDA_DIR}" && \
