--- a/tensorflow/Dockerfile
+++ b/tensorflow/Dockerfile
@@ -9,8 +9,8 @@ LABEL maintainer="Jupyter Project <jupyter@googlegroups.com>"
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install Tensorflow
-RUN mamba install --yes \
-    'tensorflow<2.6' && \
+RUN mamba install --yes -c conda-forge \
+    tensorflow && \
     mamba clean --all -f -y && \
     pip install autokeras  --no-cache-dir && \
     rm -fr ~/.cache/pip && \
