--- a/pytorch/Dockerfile
+++ b/pytorch/Dockerfile
@@ -8,15 +8,7 @@ FROM ${ROOT_CONTAINER}
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install pytorch
-RUN mamba install  --yes -c pytorch -c fastai \
-    'pytorch' \
-    'torchvision' \
-    'torchaudio' \
-    'torchtext' \
-    'fastai' \
-    'cudatoolkit=10.2' && \
-    mamba clean --all -f -y && \
-    pip install pytorch-lightning  --no-cache-dir && \
+RUN pip install torch torchvision torchaudio torchtext fastai pytorch-lightning --no-cache-dir && \
     rm -fr ~/.cache/pip && \
     fix-permissions "${CONDA_DIR}" && \
     fix-permissions "/home/${NB_USER}"
