--- a/mxnet/Dockerfile
+++ b/mxnet/Dockerfile
@@ -7,7 +7,12 @@ FROM ${ROOT_CONTAINER}
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install mxnet and autogluon
-RUN pip install torch torchvision mxnet-cu102==1.7.0 --no-cache-dir && \
+RUN mamba install --yes  --quiet -c pytorch \
+    'pytorch' \
+    'torchvision' \
+    'cudatoolkit=10.2' && \
+    mamba clean --all -f -y && \
+    pip install mxnet-cu102==1.7.0 --no-cache-dir && \
     pip install autogluon --no-cache-dir && \
     rm -fr ~/.cache/pip && \
     fix-permissions "${CONDA_DIR}" && \
