--- a/tensorflow/Dockerfile
+++ b/tensorflow/Dockerfile
@@ -9,10 +9,7 @@ LABEL maintainer="Jupyter Project <jupyter@googlegroups.com>"
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install Tensorflow
-RUN mamba install --quiet --yes -c conda-forge \
-    tensorflow && \
-    mamba clean --all -f -y && \
-    pip install autokeras  --no-cache-dir && \
+RUN pip install daal==2021.3.0 autokeras  --no-cache-dir && \
     rm -fr ~/.cache/pip && \
     fix-permissions "${CONDA_DIR}" && \
     fix-permissions "/home/${NB_USER}"
